# xctch

./: .gitignore  Cargo.toml  README.md
assets/: bria.safetensors
examples/moshi/: export_mimi.py
scripts/llama3/: import_llama.py  import_vocab.py
scripts/moshi/: export_moshi.py  export_streaming_conv.py  llama_transformer.py
scripts/nanogpt/: export_nanogpt.py
scripts/profiling/: read_profile.py
xctch-core/: Cargo.toml
xctch-core/examples/: basics.rs  basics_sys.rs  llama3.rs  mimi.rs  moshi.rs  nanogpt.rs  streaming_conv.rs
xctch-core/src/: lib.rs  method.rs  program.rs  tensor.rs
xctch-core/tests/: shared.py  shared2.py
xctch-moshi/: Cargo.toml
xctch-moshi/examples/: moshi-transformer.rs  moshi.rs
xctch-sys/: Cargo.toml  build.rs
xctch-sys/cpp/: cxx_api.cpp  cxx_api.hpp
xctch-sys/src/: cxx_ffi.rs  error.rs  evalue.rs  lib.rs  safe.rs  scalar_type.rs
