[workspace]
members = [
    "xctch-core",
    "xctch-moshi",
    "xctch-sys",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Bindings for executorch"
repository = "https://github.com/LaurentMazare/xctch"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]


[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle = { version = "0.8.2", package = "candle-core" }
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
clap = { version = "4.5", features = ["derive"] }
cxx = "1.0"
cxx-build = "1.0"
half = { version = "2.3.1", features = ["num-traits"] }
hf-hub = "0.4.1"
libc = "0.2.168"
num-traits = "0.2.15"
ouroboros = "0.18"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xctch = { path = "xctch-core", version = "0.4.0" }
xctch-sys = { path = "xctch-sys", version = "0.4.0" }
