[package]
name = "xctch"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
cxx = { workspace = true }
half = { workspace = true }
ouroboros = { workspace = true }
xctch-sys = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
